# near-market-agent

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  Dockerfile  LICENSE  README.md  pyproject.toml  run_cycle.py
.claude/agents/: package-builder.md  service-builder.md  system-builder.md  text-writer.md
.github/workflows/: ci.yml
demo/: live_bids_2026-03-03.md  live_scan_output.md  run_demo.py  scan_output_competition.md
knowledge/: near-reference.md
near_market_agent/: __init__.py  agent.py  alignment.py  claude_cli.py  cli.py  config.py  deployer.py  github_publisher.py  job_evaluator.py  job_router.py  json_utils.py  learner.py  logger.py  market_client.py  models.py  researcher.py  sanitize.py  work_engine.py
templates/mcp-server/: README.md  package.json
templates/mcp-server/src/: index.ts
templates/npm-package/: README.md  package.json  tsconfig.json
templates/npm-package/src/: index.ts
templates/npm-package/tests/: index.test.ts
templates/pypi-package/: README.md  pyproject.toml
templates/pypi-package/src/: __init__.py
templates/pypi-package/tests/: test_main.py
tests/: test_agent.py  test_alignment.py  test_config.py  test_deployer.py  test_github_publisher.py  test_integration.py  test_job_evaluator.py  test_job_router.py  test_learner.py  test_market_client.py  test_models.py  test_rate_limit.py  test_researcher.py  test_sanitize.py  test_work_engine.py
