[project]
name = "near-market-agent"
version = "0.1.0"
description = "Autonomous agent for market.near.ai — finds jobs, bids, completes work, submits deliverables"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
near-agent = "near_market_agent.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
