[project]
name = "near-market-agent"
version = "0.1.0"
description = "Autonomous agent for market.near.ai — finds jobs, bids, completes work, submits deliverables"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-asyncio>=0.23"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "mypy>=1.0", "ruff>=0.4"]

[project.scripts]
near-agent = "near_market_agent.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
