[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "near-package"
version = "1.0.0"
description = "NEAR Protocol utility package"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["near", "blockchain"]
dependencies = ["py-near>=0.3.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
