[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pypi-package-template"
version = "0.1.0"
description = "Python package template for NEAR ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
